@@ -1,3 +1,10 @@
+2009-03-08  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* swank-fancy-inspector.lisp (make-visit-file-thunk): New helper;
+	extracted from emacs-inspect [file-stream].
+	([method] emacs-inspect file-stream): Use it.
+	([method] emacs-inspect stream-error): Use it, too.
+
 2009-03-04  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-asdf.el: Really do the commit from entry 2009-02-28.
